--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "tiramisu",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "./node_modules/mocha/bin/mocha"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -18,6 +19,7 @@
     "node-mime": "^1.0.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "pingpp": "^2.0.6",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
