--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "express": "~4.13.1",
     "express-handlebars": "^2.0.1",
     "express-session": "^1.12.1",
+    "express-validator": "^2.18.0",
+    "log4js": "^0.6.29",
     "moment": "^2.10.6",
-    "morgan": "~1.6.1",
     "mysql": "^2.9.0",
     "node-mime": "^1.0.0",
     "passport": "^0.3.2",
