--- a/public/package.json
+++ b/public/package.json
@@ -20,9 +20,11 @@
   "author": "xblxc",
   "license": "MIT",
   "dependencies": {
+    "history": "^1.13.1",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-redux": "^4.0.0",
+    "react-router": "^1.0.2",
     "redux": "^3.0.0",
     "redux-thunk": "^0.1.0"
   },
@@ -34,6 +36,7 @@
     "gulp-autoprefixer": "^1.0.1",
     "gulp-cheerio": "^0.6.2",
     "gulp-concat": "^2.6.0",
+    "gulp-gzip": "^1.2.0",
     "gulp-imagemin": "^2.2.1",
     "gulp-minify-css": "^1.2.2",
     "gulp-plumber": "^0.6.6",
@@ -41,6 +44,7 @@
     "gulp-replace": "^0.5.4",
     "gulp-rev-append": "^0.1.6",
     "gulp-sass": "^2.0.4",
+    "gulp-sequence": "^0.4.1",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.7",
     "imagemin-pngquant": "^4.0.0",
