--- a/public/package.json
+++ b/public/package.json
@@ -26,7 +26,8 @@
     "react-redux": "^4.0.0",
     "react-router": "^1.0.2",
     "redux": "^3.0.0",
-    "redux-thunk": "^0.1.0"
+    "redux-thunk": "^0.1.0",
+    "superagent": "^1.5.0"
   },
   "devDependencies": {
     "babel-core": "^5.6.18",
