--- a/public/package.json
+++ b/public/package.json
@@ -50,6 +50,7 @@
     "gulp-util": "^3.0.7",
     "imagemin-pngquant": "^4.0.0",
     "react-hot-loader": "^1.3.0",
+    "redux-logger": "^2.2.1",
     "webpack": "^1.9.11",
     "webpack-dev-server": "^1.14.0"
   }
