--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "express": "~4.13.1",
     "express-handlebars": "^2.0.1",
     "express-session": "^1.12.1",
-    "express-validator": "^2.18.0",
+    "express-validator": "2.18.0",
     "log4js": "^0.6.29",
     "moment": "^2.10.6",
     "mysql": "^2.9.0",
@@ -23,7 +23,8 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pingpp": "^2.0.6",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "uuid": "^2.0.1"
   },
   "devDependencies": {
     "chai": "^3.4.1",
