--- a/public/package.json
+++ b/public/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^4.0.0",
     "react-router": "^1.0.2",
     "redux": "^3.0.0",
+    "redux-form": "^4.0.3",
     "redux-thunk": "^0.1.0",
     "superagent": "^1.5.0"
   },
