--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "./node_modules/mocha/bin/mocha"
+    "test": "./node_modules/mocha/bin/mocha",
+    "dev": "NODE_ENV=dev node ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
