--- a/public/package.json
+++ b/public/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "history": "^1.13.1",
     "react": "^0.14.0",
+    "react-addons-linked-state-mixin": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.2",
@@ -34,6 +35,7 @@
     "babel-core": "^5.6.18",
     "babel-loader": "^5.1.4",
     "browser-sync": "^2.0.0",
+    "clone": "^1.0.2",
     "gulp": "^3.8.8",
     "gulp-autoprefixer": "^1.0.1",
     "gulp-cheerio": "^0.6.2",
@@ -50,6 +52,7 @@
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.7",
     "imagemin-pngquant": "^4.0.0",
+    "object-assign": "^4.0.1",
     "react-hot-loader": "^1.3.0",
     "redux-logger": "^2.2.1",
     "webpack": "^1.9.11",
