--- a/public/package.json
+++ b/public/package.json
@@ -28,6 +28,7 @@
     "react-router": "^1.0.2",
     "redux": "^3.0.0",
     "redux-form": "^4.0.3",
+    "redux-simple-router": "^1.0.2",
     "redux-thunk": "^0.1.0",
     "superagent": "^1.5.0"
   },
