--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "body-parser": "~1.13.2",
     "clone": "^1.0.2",
+    "commander": "2.9.0",
     "cookie-parser": "~1.3.5",
     "crypto-js": "^3.1.5",
     "debug": "~2.2.0",
@@ -26,6 +27,7 @@
     "passport-local": "^1.0.0",
     "pingpp": "^2.0.6",
     "serve-favicon": "~2.3.0",
+    "shelljs": "0.5.3",
     "uuid": "^2.0.1"
   },
   "devDependencies": {
@@ -33,6 +35,6 @@
     "gulp": "^3.9.0",
     "mocha": "^2.3.4",
     "sequelize": "^3.14.2",
-    "request": "^2.67.0"
+    "supertest": "1.1.0"
   }
 }
