--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "./node_modules/mocha/bin/mocha",
+    "test": "./node_modules/.bin/_mocha",
     "dev": "NODE_ENV=dev node ./bin/www"
   },
   "dependencies": {
@@ -35,6 +35,7 @@
     "gulp": "^3.9.0",
     "mocha": "^2.3.4",
     "sequelize": "^3.14.2",
-    "supertest": "1.1.0"
+    "supertest": "1.1.0",
+    "supertest-session": "2.0.0"
   }
 }
