--- a/public/nginx/nginx.conf
+++ b/public/nginx/nginx.conf
@@ -14,17 +14,25 @@ http {
 
     #静态文件代理服务器设置
     server {
-        listen       3001;
+        listen       7001;
         server_name  127.0.0.1;
 
-        location ^~ .*\.(gif|jpg|jpeg|png|bmp|swf|js|css|html)$ {
+        location / {
+          # proxy_pass    http://192.168.0.107:3001/;
+          proxy_pass    http://127.0.0.1:3001/;
+          proxy_redirect default;
+        }
+    }
+
+    server {
+        listen       7002;
+        server_name  127.0.0.1;
+
+        # location ^~ .*\.(gif|jpg|jpeg|png|bmp|swf|js|css|html)$ {
+        location / {
             root   /cake/tiramisu/public;
             # index  index.html index.htm;
             add_header Access-Control-Allow-Origin '*';
-        }
-        location / {
-          proxy_pass    http://192.168.0.107:3001/;
-          proxy_redirect default;
         }
     }
 }
