--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "test": "./node_modules/.bin/_mocha",
-    "dev": "NODE_ENV=dev node ./bin/www"
+    "dev": "NODE_ENV=dev node ./bin/www",
+    "team_dev": "./public/nginx/nginx.sh"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
