--- a/public/package.json
+++ b/public/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "babel-core": "^5.6.18",
     "babel-loader": "^5.1.4",
+    "babel-preset-es2015": "^6.3.13",
     "browser-sync": "^2.0.0",
     "clone": "^1.0.2",
     "gulp": "^3.8.8",
