--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-handlebars": "^2.0.1",
     "express-session": "^1.12.1",
     "express-validator": "2.18.0",
+    "geolib": "2.0.18",
     "log4js": "^0.6.29",
     "moment": "^2.10.6",
     "mysql": "^2.9.0",
