--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "serve-favicon": "~2.3.0",
     "shelljs": "0.5.3",
     "uuid": "^2.0.1",
+    "validate.js": "^0.9.0",
+    "validator": "^4.6.1",
     "validator.js": "^1.2.3"
   },
   "devDependencies": {
