--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pingpp": "^2.0.6",
+    "request": "2.69.0",
     "serve-favicon": "~2.3.0",
     "shelljs": "0.5.3",
     "uuid": "^2.0.1",
