--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "./node_modules/.bin/_mocha",
     "dev": "NODE_ENV=dev node ./bin/www",
     "win_dev": "set NODE_ENV=test&node ./bin/www",
-    "team_dev": "./public/nginx/nginx.sh"
+    "team_dev": "./public/nginx/nginx.sh",
+    "frontend" : "NODE_ENV=test node ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
