--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "cookie-parser": "~1.3.5",
     "crypto-js": "^3.1.5",
     "debug": "~2.2.0",
-    "excel-export": "^0.5.1",
+    "excel": "^0.1.4",
     "express": "~4.13.1",
     "express-handlebars": "^2.0.1",
     "express-session": "^1.12.1",
@@ -28,6 +28,7 @@
     "mysql": "^2.9.0",
     "mysql-queues": "1.0.0",
     "node-mime": "^1.0.0",
+    "node-xlsx": "^0.6.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pingpp": "^2.0.6",
