--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tiramisu",
-  "version": "0.0.1",
+  "version": "v0.1.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
@@ -8,7 +8,8 @@
     "dev": "NODE_ENV=dev node ./bin/www",
     "win_dev": "set NODE_ENV=test&node ./bin/www",
     "team_dev": "./public/nginx/nginx.sh",
-    "frontend": "NODE_ENV=test node ./bin/www"
+    "frontend": "NODE_ENV=test node ./bin/www",
+    "fe": "NODE_ENV=test node ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -17,7 +18,6 @@
     "cookie-parser": "~1.3.5",
     "crypto-js": "^3.1.5",
     "debug": "~2.2.0",
-    "excel": "^0.1.4",
     "express": "~4.13.1",
     "express-handlebars": "^2.0.1",
     "express-session": "^1.12.1",
