--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tiramisu",
-  "version": "v0.1.0",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
