--- a/public/package.json
+++ b/public/package.json
@@ -49,6 +49,7 @@
     "gulp-rename": "^1.2.0",
     "gulp-replace": "^0.5.4",
     "gulp-rev-append": "^0.1.6",
+    "node-sass": "^3.5.0-beta.1",
     "gulp-sass": "^2.0.4",
     "gulp-sequence": "^0.4.1",
     "gulp-uglify": "^1.1.0",
