--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "win_dev": "set NODE_ENV=test&node ./bin/www",
     "team_dev": "./public/nginx/nginx.sh",
     "frontend": "NODE_ENV=test node ./bin/www",
-    "fe": "NODE_ENV=test node ./bin/www"
+    "fe": "NODE_ENV=test node ./bin/www",
+    "dfe" : "./node_modules/.bin/gulp deploy --cwd public"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
