--- a/public/package.json
+++ b/public/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "gulp": "gulp",
-    "wds": "gulp webpack-dev-server"
+    "wds": "gulp webpack-dev-server",
+    "deploy": "rm -rf ./build; webpack --config webpack.deploy.config.js",
+    "dev": "rm -rf ./build; gulp --gulpfile ./gulpfile2.js; mkdir build; webpack-dev-server --config webpack.dev.config.js --port 8080 --host 0.0.0.0 --progress --color --profile --history-api-fallback"
   },
   "repository": {
     "type": "git",
@@ -20,6 +22,7 @@
   "author": "xblxc",
   "license": "MIT",
   "dependencies": {
+    "assets-webpack-plugin": "^3.4.0",
     "history": "^1.13.1",
     "react": "^0.14.0",
     "react-addons-linked-state-mixin": "^0.14.3",
@@ -38,6 +41,8 @@
     "babel-preset-es2015": "^6.3.13",
     "browser-sync": "^2.0.0",
     "clone": "^1.0.2",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "gulp": "^3.8.8",
     "gulp-autoprefixer": "^1.0.1",
     "gulp-cheerio": "^0.6.2",
@@ -58,6 +63,8 @@
     "object-assign": "^4.0.1",
     "react-hot-loader": "^1.3.0",
     "redux-logger": "^2.2.1",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.0",
     "webpack": "^1.9.11",
     "webpack-dev-server": "^1.14.0"
   }
