--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "log4js": "^0.6.29",
     "moment": "^2.10.6",
     "mysql": "^2.9.0",
+    "mysql-queues": "^1.0.0",
     "node-mime": "^1.0.0",
     "node-xlsx": "^0.6.0",
     "passport": "^0.3.2",
