--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "express": "~4.13.1",
     "express-handlebars": "^2.0.1",
     "express-session": "^1.12.1",
-    "express-validator": "2.18.0",
+    "express-validator": "^2.20.0",
     "geolib": "2.0.18",
     "log4js": "^0.6.29",
     "moment": "^2.10.6",
@@ -40,7 +40,7 @@
     "shelljs": "0.5.3",
     "uuid": "^2.0.1",
     "validate.js": "^0.9.0",
-    "validator": "^4.6.1",
+    "validator": "^5.1.0",
     "validator.js": "^1.2.3"
   },
   "devDependencies": {
