--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "qs": "NODE_ENV=test node ./bin/www"
   },
   "dependencies": {
+    "async": "^2.0.0-rc.1",
     "body-parser": "~1.13.2",
     "clone": "^1.0.2",
     "commander": "2.9.0",
@@ -29,7 +30,6 @@
     "log4js": "^0.6.29",
     "moment": "^2.10.6",
     "mysql": "^2.9.0",
-    "mysql-queues": "^1.0.0",
     "node-mime": "^1.0.0",
     "node-xlsx": "^0.6.0",
     "passport": "^0.3.2",
