--- a/public/package.json
+++ b/public/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "gulp": "gulp",
-    "wds": "gulp webpack-dev-server",
-    "deploy": "rm -rf ./build; webpack --config webpack.deploy.config.js",
-    "dev": "rm -rf ./build; gulp --gulpfile ./gulpfile2.js; mkdir build; webpack-dev-server --config webpack.dev.config.js --port 8080 --host 0.0.0.0 --progress --color --profile --history-api-fallback"
+    "wds": "gulp webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -54,16 +52,17 @@
     "gulp-rename": "^1.2.0",
     "gulp-replace": "^0.5.4",
     "gulp-rev-append": "^0.1.6",
-    "node-sass": "^3.5.0-beta.1",
     "gulp-sass": "^2.0.4",
     "gulp-sequence": "^0.4.1",
+    "gulp-template": "^3.1.0",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.7",
+    "imagemin-jpeg-recompress": "^4.3.0",
     "imagemin-pngquant": "^4.0.0",
+    "node-sass": "^3.5.0-beta.1",
     "object-assign": "^4.0.1",
     "react-hot-loader": "^1.3.0",
     "redux-logger": "^2.2.1",
-    "sass-loader": "^3.2.0",
     "style-loader": "^0.13.0",
     "webpack": "^1.9.11",
     "webpack-dev-server": "^1.14.0"
