--- a/public/package.json
+++ b/public/package.json
@@ -38,6 +38,7 @@
     "babel-loader": "^5.1.4",
     "babel-preset-es2015": "^6.3.13",
     "browser-sync": "^2.0.0",
+    "classnames": "^2.2.3",
     "clone": "^1.0.2",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
