--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "async": "^2.0.0-rc.1",
     "body-parser": "~1.13.2",
     "clone": "^1.0.2",
+    "co": "^4.6.0",
     "commander": "2.9.0",
     "cookie-parser": "~1.3.5",
     "crypto-js": "^3.1.5",
@@ -27,6 +28,7 @@
     "express-session": "^1.12.1",
     "express-validator": "^2.20.0",
     "geolib": "2.0.18",
+    "lodash": "^4.6.1",
     "log4js": "^0.6.29",
     "moment": "^2.10.6",
     "mysql": "^2.9.0",
@@ -51,5 +53,4 @@
     "supertest": "1.1.0",
     "supertest-session": "2.0.0"
   }
-  
 }
