--- a/public/package.json
+++ b/public/package.json
@@ -47,7 +47,7 @@
     "gulp-cheerio": "^0.6.2",
     "gulp-concat": "^2.6.0",
     "gulp-gzip": "^1.2.0",
-    "gulp-imagemin": "^2.2.1",
+    "gulp-image-optimization": "^0.1.3",
     "gulp-minify-css": "^1.2.2",
     "gulp-plumber": "^0.6.6",
     "gulp-rename": "^1.2.0",
@@ -58,7 +58,6 @@
     "gulp-template": "^3.1.0",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.7",
-    "imagemin-pngquant": "^4.0.0",
     "object-assign": "^4.0.1",
     "react-hot-loader": "^1.3.0",
     "redux-logger": "^2.2.1",
