--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-validator": "^2.20.0",
     "geolib": "2.0.18",
     "lodash": "^4.6.1",
+    "immutable": "^3.7.6",
     "log4js": "^0.6.29",
     "moment": "^2.10.6",
     "mysql": "^2.9.0",
@@ -48,6 +49,8 @@
     "chai": "^3.4.1",
     "gulp": "github:gulpjs/gulp#4.0",
     "mocha": "^2.3.4",
+    "sequelize": "^3.14.2",
+    "should": "^8.3.0",
     "supertest": "1.1.0",
     "supertest-session": "2.0.0",
     "supervisor": "^0.10.0"
