--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "uuid": "^2.0.1",
     "validate.js": "^0.9.0",
     "validator": "^5.1.0",
-    "validator.js": "^1.2.3"
+    "validator.js": "^1.2.3",
+    "express-mysql-session": "^1.0.0"
   },
   "devDependencies": {
     "chai": "^3.4.1",
