--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "./node_modules/.bin/_mocha",
+    "test": "NODE_ENV=dev ./node_modules/.bin/_mocha",
     "dev": "NODE_ENV=dev node ./bin/www",
     "win_dev": "set NODE_ENV=dev&node ./bin/www",
     "win_dev_web": "set NODE_ENV=test&node ./bin/www",
