--- a/public/package.json
+++ b/public/package.json
@@ -26,6 +26,7 @@
     "react": "^0.14.0",
     "react-addons-linked-state-mixin": "^0.14.3",
     "react-bootstrap-datetimepicker": "0.0.22",
+    "react-bootstrap-datetimerange-picker": "0.0.10",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.2",
