--- a/package.json
+++ b/package.json
@@ -21,16 +21,18 @@
     "body-parser": "~1.13.2",
     "clone": "^1.0.2",
     "co": "^4.6.0",
+    "compression": "^1.6.2",
     "cookie-parser": "~1.3.5",
     "crypto-js": "^3.1.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-handlebars": "^2.0.1",
+    "express-mysql-session": "^1.0.0",
     "express-session": "^1.12.1",
     "express-validator": "^2.20.0",
     "geolib": "2.0.18",
-    "lodash": "^4.6.1",
     "immutable": "^3.7.6",
+    "lodash": "^4.6.1",
     "log4js": "^0.6.29",
     "moment": "^2.10.6",
     "mysql": "^2.9.0",
@@ -42,8 +44,7 @@
     "serve-favicon": "~2.3.0",
     "uuid": "^2.0.1",
     "validate.js": "^0.9.0",
-    "validator": "^5.1.0",
-    "express-mysql-session": "^1.0.0"
+    "validator": "^5.1.0"
   },
   "devDependencies": {
     "chai": "^3.4.1",
