--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "chai": "^3.4.1",
+    "forever": "^0.15.2",
     "gulp": "github:gulpjs/gulp#4.0",
     "mocha": "^2.3.4",
     "sequelize": "^3.14.2",
