商品详情页-支撑管理页面-30%

--- a/public/package.json
+++ b/public/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.2",
+    "react-styling": "^1.5.1",
     "redux": "^3.0.0",
     "redux-form": "^4.0.3",
     "redux-simple-router": "^1.0.2",
