--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ public/index.html
 public/node_modules
 public/build
 public/cache/*.gzip
+public/bootstrap-datepicker.min.js
+public/chinese_py.min.js
+public/plugins.min.js
 views/index.hbs
 .vscode
 version/
