--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lodash": "^4.6.1",
     "log4js": "^0.6.29",
     "moment": "^2.10.6",
+    "mongoose": "^4.5.10",
     "mysql": "^2.9.0",
     "node-mime": "^1.0.0",
     "node-xlsx": "^0.6.0",
