回去版本配置文件管理，将生成的无用文件从版本库移除

--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,6 @@ public/lib/bootstrap-datepicker.min.js
 public/lib/chinese_py.min.js
 public/lib/plugins.min.js
 views/index.hbs
+logo.png
+public/images/qrcode.png
 .vscode
-version/
