--- a/public/package.json
+++ b/public/package.json
@@ -35,7 +35,8 @@
     "redux-form": "^4.0.3",
     "redux-simple-router": "^1.0.2",
     "redux-thunk": "^0.1.0",
-    "superagent": "^1.5.0"
+    "superagent": "^1.5.0",
+    "uuid": "^2.0.2"
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.4.0",
